# template_poetry_app

./: .gitignore  README.md  pyproject.toml  tox.ini
src/assets/: assets.txt
src/configs/: config.ini
src/data/: data.csv
src/template_poetry_app/: __init__.py  bubble_sort.py  logger_setup.py  merge_sort.py  template_poetry_app.py
tests/: test_sorting_algorithm.py
