[tool.poetry.scripts]
template_poetry_app = "template_poetry_app.template_poetry_app:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyre-check = "^0.9.21"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"

tox = "^4.15.1"
[tool.poetry]
name = "template-poetry-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [{include = "template_poetry_app", from = "src", to = "template_poetry_app"},
{include = "configs", from = "src", to = "template_poetry_app"},
{include = "data", from = "src", to = "template_poetry_app"},
{include = "logs", from = "src", to = "template_poetry_app"},
{include = "assets", from = "src", to = "template_poetry_app"},
]


[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.py$'
exclude = '''
(
  \.ipynb$
  | \.venv
  | __pycache__
)
'''
